Complete job infrastructure, including retries and recovery after node shutdown.